modified:   src/App.tsx modified:   src/components/About.css modified:   src/components/About.tsx new file:   src/components/Contact.css new file:   src/components/Contact.tsx new file:   src/components/Educ.css new file:   src/components/Educ.tsx modified:   src/components/ExpTimeline.css modified:   src/components/ExpTimeline.tsx new file:   src/components/Footer.css new file:   src/components/Footer.tsx modified:   src/components/Message.css modified:   src/components/Message.tsx modified:   src/components/Navbar.tsx new file:   src/components/Projects.css new file:   src/components/Projects.tsx new file:   src/components/Skills.css new file:   src/components/Skills.tsx new file:   src/components/Social.css new file:   src/components/Social.tsx new file:   src/katana.png new file:   src/nexus_tools.png new file:   src/sandrine.png new file:   src/todo.png

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -11,6 +11,10 @@
   min-height: 100vh;
 }
 
+article {
+  width: 100%;
+}
+
 .section_about .about_container {
   width: 100%;
   display: flex;
@@ -18,6 +22,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  gap: 3rem;
 }
 
 .about_left,
@@ -39,6 +44,7 @@
 
 .about_right {
   animation: rightSlideIn 1s ease-in forwards;
+  align-self: baseline;
 }
 
 .dima,
@@ -147,7 +153,6 @@ button.download_cv {
   justify-content: center;
   gap: 0.5rem;
   color: #0b0c10;
-  margin-top: 7rem;
 }
 
 p.summary_text {
