--- a/src/components/ExpTimeline.css
+++ b/src/components/ExpTimeline.css
@@ -1,18 +1,19 @@
 /* Basic setup */
-#experience {
+.section_experience {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   width: 95%;
   justify-content: center;
   align-items: center;
+  user-select: none;
+  min-height: 100vh;
 }
 
 .timeline {
   position: relative;
   margin: 0 auto;
   width: 100%;
-  border: 1px solid red;
 }
 
 .timeline::before {
@@ -87,6 +88,7 @@
 @media (max-width: 768px) {
   .timeline {
     width: 100%; /* Full width on mobile */
+    margin: 0;
   }
 
   .timeline::before {
