modified:   package-lock.json modified:   package.json modified:   src/components/Contact.css modified:   src/components/Contact.tsx modified:   src/components/Educ.css modified:   src/components/Educ.tsx modified:   src/components/ExpTimeline.css modified:   src/components/Footer.css modified:   src/components/Projects.css new file:   src/components/SkillCloud.css new file:   src/components/SkillCloud.tsx modified:   src/components/Social.css modified:   src/components/Social.tsx new file:   src/components/skillCloudAnimation.ts new file:   src/svg/aws.svg new file:   src/svg/bash.svg new file:   src/svg/blender.svg new file:   src/svg/css.svg new file:   src/svg/debian.svg new file:   src/svg/docker.svg new file:   src/svg/express.svg new file:   src/svg/figma.svg new file:   src/svg/gc.svg new file:   src/svg/gh.svg new file:   src/svg/git.svg new file:   src/svg/gitlab.svg new file:   src/svg/heroku.svg new file:   src/svg/html.svg new file:   src/svg/jquery.svg new file:   src/svg/js.svg new file:   src/svg/linux.svg new file:   src/svg/macos.svg new file:   src/svg/markdown.svg new file:   src/svg/material-ui.svg new file:   src/svg/mysql.svg new file:   src/svg/namecheap.svg new file:   src/svg/neovim.svg new file:   src/svg/nginx.svg new file:   src/svg/node.svg new file:   src/svg/npm.svg new file:   src/svg/php.svg new file:   src/svg/powershell.svg new file:   src/svg/python.svg new file:   src/svg/react.svg new file:   src/svg/sass.svg new file:   src/svg/shields.svg new file:   src/svg/sqlite.svg new file:   src/svg/tailwindcss.svg new file:   src/svg/threejs.svg new file:   src/svg/trello.svg new file:   src/svg/ts.svg new file:   src/svg/ubuntu.svg new file:   src/svg/vim.svg new file:   src/svg/vitejs.svg new file:   src/svg/vsc.svg new file:   src/svg/windows.svg new file:   src/svg/wp.svg

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,3 +1,14 @@
+.section_projects {
+  margin: 0 auto 5rem auto;
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+  min-height: 100vh;
+}
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
