--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,3 +1,14 @@
+.section_contact {
+  margin: 0 auto 5rem auto;
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  align-items: center;
+  user-select: none;
+  min-height: 100vh;
+  position: relative;
+}
+
 .contact-form_wrapper {
   width: 80%;
   margin-bottom: 3rem;
