--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,11 +2,10 @@
   background-color: var(--body_bg-color);
   color: var(--primary-color);
   text-align: center;
-  padding: 3rem 0 2rem 0;
   left: 0;
   bottom: 0;
   width: 100%;
-  font-family: "Lato", sans-serif;
   font-weight: 700;
   font-style: normal;
+  padding-bottom: 3rem;
 }
