--- a/src/components/ExpTimeline.css
+++ b/src/components/ExpTimeline.css
@@ -1,6 +1,6 @@
 /* Basic setup */
 .section_experience {
-  margin: 0 auto 5rem auto;
+  margin: 13rem auto 5rem auto;
   display: flex;
   flex-direction: column;
   width: 95%;
