modified:   index.html new file:   public/DM.svg deleted:    public/vite.svg modified:   src/components/Contact.css modified:   src/components/Contact.tsx modified:   src/components/Educ.css modified:   src/components/ExpTimeline.css modified:   src/components/ExpTimeline.tsx modified:   src/components/Header.css modified:   src/components/SkillCloudAnimation.ts modified:   src/index.css

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-around;
   gap: 5rem;
-  position: fixed;
+  position: absolute;
   top: -10rem;
   animation: headerAppear 1s ease-in forwards;
   right: 0;
