--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -59,30 +59,33 @@ form {
   border: 1px solid var(--focus-color);
 }
 
-.emai-input_wrapper {
+.email-input_wrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 0.3rem;
+  height: 4rem;
 }
 
-.emai-input_wrapper label {
-  color: var(--primary-color);
-}
-
-.emai-input_wrapper input {
+.email-input_wrapper input {
   width: 100%;
   padding: 0.5rem;
-  border-radius: 5px;
-  border: 1px solid var(--primary-color);
+  border-bottom: 2px solid #45a29e;
+  border-top: none;
+  border-left: none;
+  border-right: none;
   background-color: var(--body_bg-color);
   caret-color: var(--primary-color);
   color: var(--primary-color);
 }
 
-.emai-input_wrapper input:focus {
+.email-input_wrapper input::placeholder {
+  font-family: Roboto Mono, monospace;
+}
+
+.email-input_wrapper input:focus {
   outline: none;
-  border: 1px solid var(--focus-color);
+  border-bottom: 3px solid #45a29e;
 }
 
 .message-input_wrapper {
@@ -101,16 +104,15 @@ form {
   height: 5rem;
   padding: 0.5rem;
   border-radius: 5px;
-  border: 1px solid var(--primary-color);
+  border: 2px solid #45a29e;
   background-color: var(--body_bg-color);
   caret-color: var(--primary-color);
   color: var(--primary-color);
-  resize: vertical;
 }
 
 .message-input_wrapper textarea:focus {
   outline: none;
-  border: 1px solid var(--focus-color);
+  border: 3px solid #45a29e;
 }
 
 .contact_button {
