--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   width: 95%;
   align-items: center;
+  -webkit-user-select: none;
   user-select: none;
   min-height: 100vh;
   position: relative;
@@ -126,6 +127,7 @@ form {
   text-decoration: none;
   border-radius: 8px;
   font-weight: 500;
+  -webkit-user-select: none;
   user-select: none;
   cursor: pointer;
   border: none;
@@ -158,5 +160,7 @@ form {
   textarea {
     font-size: 16px;
     -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%; /* Firefox */
+    text-size-adjust: 100%; /* Standard */
   }
 }
