--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,9 @@ h2 {
     color: #17252a;
     background-color: #3aafa9;
   }
+  a {
+    color: #3aafa9;
+  }
   a:hover {
     color: #747bff;
   }
