new file:   public/DimitriMakarovResume.pdf modified:   src/App.tsx modified:   src/components/About.css modified:   src/components/About.tsx modified:   src/components/Educ.css modified:   src/components/ExpTimeline.css modified:   src/components/ExpTimeline.tsx modified:   src/components/Projects.css modified:   src/components/Projects.tsx new file:   src/components/ToTop.css new file:   src/components/ToTop.tsx modified:   src/index.css

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -152,7 +152,24 @@ button.download_cv {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  color: #0b0c10;
+}
+
+a.cta-button {
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  border: 1px solid #45a29e;
+  padding: 1rem;
+}
+
+.cta-button:active {
+  transform: scale(0.95);
+}
+
+.download_icon path {
+  stroke: #45a29e;
 }
 
 p.summary_text {
@@ -265,7 +282,7 @@ span.closing_slash {
 
 @media (max-width: 768px) {
   .section_about .about_container {
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 2rem;
   }
 
