Changes: modified:   src/App.css modified:   src/App.tsx modified:   src/components/About.css modified:   src/components/Contact.css modified:   src/components/Contact.tsx modified:   src/components/Educ.css modified:   src/components/ExpTimeline.css modified:   src/components/ExpTimeline.tsx new file:   src/components/Github.css new file:   src/components/Github.tsx modified:   src/components/Header.css modified:   src/components/Header.tsx new file:   src/components/Langs.css new file:   src/components/Langs.tsx new file:   src/components/Linkedin.css new file:   src/components/Linkedin.tsx new file:   src/components/MobileNav.css new file:   src/components/MobileNav.tsx modified:   src/components/Navbar.css modified:   src/components/Navbar.tsx modified:   src/components/Projects.css modified:   src/components/Projects.tsx modified:   src/components/SkillCloud.css modified:   src/components/SkillCloud.tsx modified:   src/components/SkillCloudAnimation.ts modified:   src/components/Social.css modified:   src/components/Social.tsx modified:   src/components/ToTop.css modified:   src/components/ToTop.tsx modified:   src/index.css new file:   src/svg/svg.svg

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -281,9 +281,16 @@ span.closing_slash {
 }
 
 @media (max-width: 768px) {
+  .section_about {
+    flex-direction: column;
+    gap: 2rem;
+    margin: 1.5rem auto 0 auto;
+  }
+
   .section_about .about_container {
     flex-direction: column-reverse;
     gap: 2rem;
+    margin: 1.5rem auto 0 auto;
   }
 
   .dima {
@@ -301,5 +308,9 @@ span.closing_slash {
   .about_left,
   .about_right {
     width: 100%;
+  }
+
+  .about_right {
+    margin-bottom: 7rem;
   }
 }
