--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   text-align: center;
   width: 100%;
   overflow-x: hidden;
+  position: relative;
+  z-index: 0;
 }
 
 .logo {
@@ -16,24 +18,4 @@
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #c5c6c7);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: var(--text-color-four);
 }
