--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -10,9 +10,17 @@
   position: relative;
 }
 
+.section_contact h2 {
+  margin-bottom: 7rem;
+}
+
 .contact-form_wrapper {
   width: 80%;
-  margin-bottom: 3rem;
+  margin: 0 auto 3rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-form_wrapper h3.contact_title {
@@ -36,36 +44,39 @@ form {
 
 .name-input_wrapper {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: flex-start;
   gap: 0.3rem;
-}
-
-.name-input_wrapper label {
-  color: var(--primary-color);
 }
 
 .name-input_wrapper input {
   width: 100%;
   padding: 0.5rem;
-  border-radius: 5px;
-  border: 1px solid var(--primary-color);
-  background-color: var(--body_bg-color);
+  border-bottom: 2px solid #45a29e;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  background-color: transparent;
   caret-color: var(--primary-color);
   color: var(--primary-color);
 }
 
+.name-input_wrapper input::placeholder {
+  font-family: Roboto Mono, monospace;
+}
+
 .name-input_wrapper input:focus {
   outline: none;
-  border: 1px solid var(--focus-color);
+  border-bottom: 2px solid #66fcf1;
 }
 
 .email-input_wrapper {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: flex-start;
   gap: 0.3rem;
-  height: 4rem;
 }
 
 .email-input_wrapper input {
@@ -75,7 +86,7 @@ form {
   border-top: none;
   border-left: none;
   border-right: none;
-  background-color: var(--body_bg-color);
+  background-color: transparent;
   caret-color: var(--primary-color);
   color: var(--primary-color);
 }
@@ -86,7 +97,7 @@ form {
 
 .email-input_wrapper input:focus {
   outline: none;
-  border-bottom: 3px solid #45a29e;
+  border-bottom: 2px solid #66fcf1;
 }
 
 .message-input_wrapper {
@@ -94,66 +105,97 @@ form {
   flex-direction: column;
   align-items: flex-start;
   gap: 0.3rem;
-}
-
-.message-input_wrapper label {
-  color: var(--primary-color);
+  margin-top: 2rem;
 }
 
 .message-input_wrapper textarea {
   width: 100%;
-  height: 5rem;
+  height: 7rem;
   padding: 0.5rem;
   border-radius: 5px;
   border: 2px solid #45a29e;
-  background-color: var(--body_bg-color);
-  caret-color: var(--primary-color);
-  color: var(--primary-color);
+  background-color: transparent;
+  caret-color: #45a29e;
+  color: #feffff;
+  font-family: Roboto Mono, monospace;
+  resize: none;
 }
 
-.message-input_wrapper textarea:focus {
-  outline: none;
-  border: 3px solid #45a29e;
+.message-input_wrapper textarea:focus,
+.message-input_wrapper textarea:active {
+  outline: #45a29e;
+  border: 2px solid #66fcf1;
 }
 
-.contact_button {
-  display: inline-block;
+button.contact_button {
+  border-radius: 7px;
   width: 20%;
-  margin: 0 auto;
-  padding: 0.5rem 1.5rem;
-  margin-top: 1rem;
-  color: var(--quaternary-color);
-  background-color: var(--primary-color);
-  text-decoration: none;
-  border-radius: 8px;
-  font-weight: 500;
+  margin: 3rem auto 2rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  background: transparent;
+  border: 1px solid #45a29e;
+  color: #45a29e;
+  padding: 1rem;
   -webkit-user-select: none;
   user-select: none;
   cursor: pointer;
-  border: none;
 }
 
-.contact_button:hover {
-  background-color: var(--focus-color); /* Highlighted focus color on hover */
-  color: var(--body_bg-color);
+button.contact_button:focus {
+  outline: none;
+  border: 1px solid #66fcf1;
+  transform: scale(0.95);
+}
+
+button.contact_button:hover {
+  filter: drop-shadow(0 0 0.5em #45a29e);
 }
 
 .massage-mandatory-fields {
-  color: var(--primary-color);
+  color: #c5c6c7;
   font-size: 0.8rem;
 }
 
 @media screen and (max-width: 600px) {
+  .section_contact {
+    margin: 37px auto 5rem auto;
+  }
   .contact-form_wrapper {
-    width: 90%;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .name-input_wrapper input {
+    width: 100%;
   }
 
   form {
     width: 100%;
+    margin: 0 auto;
+  }
+
+  .name-input_wrapper {
+    align-items: center;
+  }
+
+  .email-input_wrapper {
+    align-items: center;
+  }
+
+  .message-input_wrapper {
+    align-items: center;
   }
 
   .contact_button {
     width: 40%;
+  }
+
+  input::placeholder,
+  textarea::placeholder {
+    font-size: 12px;
   }
 
   input,
@@ -162,5 +204,9 @@ form {
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%; /* Firefox */
     text-size-adjust: 100%; /* Standard */
+  }
+
+  button.contact_button {
+    width: 40%;
   }
 }
