--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,4 @@
-.header_container {
+.header_container-desktop {
   width: 100%;
   height: 7rem;
   display: flex;
@@ -10,6 +10,11 @@
   top: -10rem;
   animation: headerAppear 1s ease-in forwards;
   right: 0;
+  user-select: none;
+}
+
+.header_container-mobile {
+  display: none;
 }
 
 svg.logo path {
@@ -44,7 +49,22 @@ svg.logo path {
 }
 
 @media (max-width: 768px) {
-  header {
+  .header_container-desktop {
     display: none;
+  }
+
+  .header_container-mobile {
+    width: 100%;
+    height: 7rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 5rem;
+    position: absolute;
+    top: -10rem;
+    animation: headerAppear 1s ease-in forwards;
+    right: 0;
+    user-select: none;
   }
 }
