--- a/src/components/ToTop.css
+++ b/src/components/ToTop.css
@@ -7,18 +7,25 @@
   visibility: hidden; /* Initially hidden */
   background-color: transparent;
   color: #45a29e;
-  border: 1px solid #45a29e;
-  border-radius: 50%;
   padding: 10px 15px;
   cursor: pointer;
   z-index: 1000;
   transition: visibility 0.7s ease-in-out, opacity 0.7s ease-in-out;
   outline: none;
+  border: none;
+  align-items: center;
+  justify-content: center;
+  width: 53px;
+  height: 53px;
+  display: flex;
+}
+
+.to-top-button svg path {
+  fill: #45a29e;
 }
 
 .to-top-button:focus {
   outline: none;
-  border: 1px solid #66fcf1;
 }
 
 .to-top-button:active {
@@ -27,7 +34,12 @@
 
 .to-top-button:hover {
   filter: drop-shadow(0 0 0.5em #45a29e);
-  color: #66fcf1;
+  outline: none;
+  border: none;
+}
+
+.to-top-button:hover svg path {
+  fill: #66fcf1;
 }
 
 .to-top-button.visible {
@@ -38,11 +50,10 @@
 .button_to-top_description {
   opacity: 0;
   position: fixed;
-  bottom: 90px;
-  right: 90px;
+  bottom: 85px;
+  right: 107px;
   background-color: transparent;
   color: #45a29e;
-  border-radius: 5px;
   z-index: 1000;
   transition: opacity 0.3s ease-in-out;
   outline: none;
@@ -51,4 +62,18 @@
 
 .button_to-top_description.visible {
   opacity: 1;
+}
+
+.svg_wrapper {
+  width: 53px;
+  height: 53px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .to-top-button {
+    display: none;
+  }
 }
