--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -23,17 +23,6 @@
   justify-content: center;
 }
 
-.contact-form_wrapper h3.contact_title {
-  color: var(--primary-color);
-  margin-bottom: 2rem;
-  padding: 0.3rem;
-  text-transform: uppercase;
-  font-size: 2rem;
-  font-family: "Lato", sans-serif;
-  font-weight: 900;
-  font-style: normal;
-}
-
 form {
   margin: 0 auto;
   display: flex;
@@ -58,8 +47,9 @@ form {
   border-left: none;
   border-right: none;
   background-color: transparent;
-  caret-color: var(--primary-color);
-  color: var(--primary-color);
+  caret-color: #66fcf1;
+  color: #feffff;
+  font-family: Roboto Mono, monospace;
 }
 
 .name-input_wrapper input::placeholder {
@@ -87,8 +77,9 @@ form {
   border-left: none;
   border-right: none;
   background-color: transparent;
-  caret-color: var(--primary-color);
-  color: var(--primary-color);
+  caret-color: #66fcf1;
+  color: #feffff;
+  font-family: Roboto Mono, monospace;
 }
 
 .email-input_wrapper input::placeholder {
@@ -115,7 +106,7 @@ form {
   border-radius: 5px;
   border: 2px solid #45a29e;
   background-color: transparent;
-  caret-color: #45a29e;
+  caret-color: #66fcf1;
   color: #feffff;
   font-family: Roboto Mono, monospace;
   resize: none;
