--- a/src/index.css
+++ b/src/index.css
@@ -58,12 +58,10 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #45a29e;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -89,12 +87,9 @@ h2 {
     background-color: #3aafa9;
   }
   a {
-    color: #3aafa9;
+    color: #17252a;
   }
   a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+    color: #2b7a78;
   }
 }
