--- a/src/components/Educ.css
+++ b/src/components/Educ.css
@@ -29,10 +29,9 @@
   align-items: center;
   flex-direction: column;
   will-change: transform;
-  transition: all 0.5s;
+  transition: transform 0.5s;
   background-color: #1f2833;
   color: #8b8b8b; /* Text color for readability */
-  box-shadow: var(--shadow-color); /* Adds subtle depth */
   cursor: pointer;
   user-select: none;
   padding-top: 2rem;
@@ -106,12 +105,6 @@
 
 .educ-card:hover {
   transform: scale(1.05);
-}
-
-.active-studi {
-  font-size: 1.2rem;
-  color: var(--primary-color);
-  width: 500px;
 }
 
 .studi-backdrop,
@@ -247,7 +240,7 @@ ul.isg-modal_list li {
   margin: 1rem 0;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .educ-cards_wrapper {
     display: flex;
     flex-direction: column;
@@ -266,5 +259,9 @@ ul.isg-modal_list li {
   .mitro-modal,
   .isg-modal {
     height: 700px;
+  }
+
+  .educ-card:hover {
+    transform: none;
   }
 }
