--- a/src/components/ExpTimeline.css
+++ b/src/components/ExpTimeline.css
@@ -232,8 +232,17 @@
 }
 
 @media (prefers-color-scheme: light) {
+  .timeline::before {
+    background-color: #17252a; /* Line color */
+  }
+
   .circle {
-    border: 1px solid rgb(21, 255, 0);
-    background-color: #f9f9f9;
+    border: 2px solid #17252a;
+    background-color: #3aafa9;
+  }
+
+  .connector::after {
+    border-left: 40px solid #3aafa9;
+    background-color: #1f2833;
   }
 }
