--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -23,7 +23,8 @@
   border-radius: 12px;
   overflow: hidden;
   max-width: 445px;
-  transition: transform 0.3s, box-shadow 0.3s;
+  will-change: transform;
+  transition: transform 0.3s;
   height: 37rem;
   display: flex;
   flex-direction: column;
@@ -113,11 +114,15 @@ h2.card-title {
   height: 3rem;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .section_projects {
     margin: -181px auto 5rem auto;
   }
   .card {
     min-height: 40rem;
+  }
+
+  .card:hover {
+    transform: none;
   }
 }
