Changes: modified:   src/components/Footer.css modified:   src/components/MobileNav.css modified:   src/components/MobileNav.tsx modified:   src/components/Navbar.tsx modified:   src/components/Projects.css

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -119,10 +119,20 @@ h2.card-title {
     margin: -181px auto 5rem auto;
   }
   .card {
-    min-height: 40rem;
+    min-height: 37rem;
+    justify-content: space-between;
   }
 
   .card:hover {
     transform: none;
+  }
+
+  .card-content {
+    padding: 20px;
+    height: 34%;
+  }
+
+  .card_title_wrapper {
+    height: 2rem;
   }
 }
