--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: var(--body_bg-color);
-  color: var(--primary-color);
+  background-color: transparent;
+  color: #45a29e;
   text-align: center;
   left: 0;
   bottom: 0;
