--- a/src/components/MobileNav.css
+++ b/src/components/MobileNav.css
@@ -1,12 +1,47 @@
-#mobile_nav {
+.mobile_nav_wrapper {
+  position: relative;
+}
+
+.mobile_nav {
   display: flex;
-  justify-content: end;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 1rem 2rem;
-  width: 50%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background: #0b0c10;
+  height: 100vh;
+  user-select: none;
+  z-index: 1000;
+  left: 0;
+  overflow: hidden;
 }
 
 .mobile_menu circle,
-.mobile_menu rect {
+.mobile_menu path {
   stroke: #45a29e;
+}
+
+.nav__switch {
+  display: none;
+}
+
+.mobile_link_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.mobile_close_button {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
 }
