--- a/src/components/Educ.css
+++ b/src/components/Educ.css
@@ -258,10 +258,25 @@ ul.isg-modal_list li {
   .studi-modal,
   .mitro-modal,
   .isg-modal {
+    width: 337px;
     height: 700px;
   }
 
   .educ-card:hover {
     transform: none;
+  }
+
+  .studi-modal_title,
+  .mitro-modal_title,
+  .isg-modal_title {
+    font-size: 1rem;
+    margin-bottom: 0.2rem;
+  }
+
+  .studi-modal_description,
+  .mitro-modal_description,
+  .isg-modal_description {
+    font-size: 0.8rem;
+    margin-bottom: 0.5rem;
   }
 }
