--- a/src/components/MobileNav.css
+++ b/src/components/MobileNav.css
@@ -5,7 +5,7 @@
 .mobile_nav {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   width: 100%;
   position: fixed;
@@ -16,6 +16,7 @@
   z-index: 1000;
   left: 0;
   overflow: hidden;
+  gap: 2rem;
 }
 
 .mobile_menu circle,
@@ -28,18 +29,20 @@
 }
 
 .mobile_link_wrapper {
+  border-radius: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  height: 7%;
+  border: 1px solid;
+  padding: 0.2rem 1rem;
 }
 
 .mobile_close_button {
   position: absolute;
-  top: 1em;
-  right: 1em;
+  top: 1.5em;
+  right: 2.3em;
   cursor: pointer;
   border: none;
   outline: none;
