--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -37,15 +37,15 @@
   }
 
   .whoAmI {
-    color: #5a2a56;
+    color: #9e1493;
   }
 
   .dm_const {
-    color: #524a08;
+    color: #ffe922;
   }
 
   .console_log {
-    color: #2d4928;
+    color: #63ff47;
   }
 }
 
