--- a/src/components/MobileNav.css
+++ b/src/components/MobileNav.css
@@ -48,3 +48,15 @@
   outline: none;
   background: none;
 }
+
+@media (prefers-color-scheme: light) {
+  .mobile_nav {
+    background: #3ab795;
+    color: #a0e8af;
+  }
+
+  .mobile_menu circle,
+  .mobile_menu path {
+    stroke: #a0e8af;
+  }
+}
