--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,6 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #66fcf1;
-}
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -83,13 +80,25 @@ h2 {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #17252a;
-    background-color: #3aafa9;
+    color: #edead0;
+    background-color: #3ab795;
   }
   a {
-    color: #17252a;
+    color: #edead0;
   }
   a:hover {
-    color: #2b7a78;
+    color: #ffcf56;
+  }
+
+  a:hover path {
+    stroke: #ffcf56;
+  }
+
+  .brackets {
+    color: #edead0;
+  }
+
+  button:hover {
+    border-color: #ffcf56;
   }
 }
